Fix compatibility with old Java